<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_splash"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White_Background"
    tools:context="ir.amirduzandeh.barmanews.view.activity.SplashActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/Splash_Icon_Margin">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/Icon_Sizes"
            android:layout_gravity="center"
            android:src="@drawable/app_icon"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/TitleColor_Dark"
            android:textSize="@dimen/Large_Font_Size"
            android:gravity="center"
            android:text="@string/Top_Ten"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/TitleColor_Dark"
            android:textSize="@dimen/Large_Font_Size"
            android:gravity="center"
            android:text="@string/All_NEWS_Agencies"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Splash_Progress"
            android:layout_marginBottom="@dimen/Large_Margin"
            android:layout_gravity="center_horizontal"
            android:indeterminateDrawable="@drawable/splash_progress"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Copy_Right"
            android:layout_marginBottom="@dimen/Large_Margin"
            android:textColor="@color/TitleColor_Dark"
            android:textSize="@dimen/Small_Font_Size"
            android:gravity="center"/>

    </LinearLayout>

</RelativeLayout>
