<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_feed_back"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ir.amirduzandeh.barmanews.view.activity.FeedBackActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:theme="@style/ThemeOverlay.AppCompat.Dark">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:id="@+id/Feed_Back_Activity_Toolbar"
            android:background="@color/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"/>

    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginRight="@dimen/Large_Margin"
        android:layout_marginLeft="@dimen/Large_Margin"
        android:layout_marginTop="@dimen/XLarge_Margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Feed_Back_Subject"
            android:hint="@string/FeedBack_Subject"
            android:textSize="@dimen/Normal_Font_Size"
            android:textColor="@color/TitleColor_Dark"
            android:textColorHint="@color/TitleColor_Dark"
            android:maxLines="1"
            android:maxLength="40"/>

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Feed_Back_Body"
            android:hint="@string/FeedBack_Body"
            android:textSize="@dimen/Normal_Font_Size"
            android:textColor="@color/TitleColor_Dark"
            android:textColorHint="@color/TitleColor_Dark"
            android:inputType="textMultiLine"
            android:gravity="top"
            android:minHeight="100dp" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/Send_FeedBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Send_FeedBack"
            android:textSize="@dimen/Normal_Font_Size"
            android:textColor="@color/TitleColor_Dark"/>
    </android.support.v7.widget.LinearLayoutCompat>

</android.support.design.widget.CoordinatorLayout>
